--- a/src/components/ChangelogSnippet/ChangelogSnippet.module.css
+++ b/src/components/ChangelogSnippet/ChangelogSnippet.module.css
@@ -10,6 +10,22 @@
   gap: var(--space-4x);
 }
 
+.sectionHeader {
+  display: flex;
+  gap: var(--space-4x);
+  align-items: end;
+}
+
+.arrow {
+  padding: 10px;
+  border: 1px solid var(--border);
+  height: fit-content;
+  cursor: default;
+  &:hover {
+    border: 1px solid var(--foreground);
+  }
+}
+
 @media (max-width: 1024px) {
   .grid {
     grid-template-columns: repeat(2, 1fr);
