--- a/src/components/ChangelogSnippet/ChangelogSnippet.module.css
+++ b/src/components/ChangelogSnippet/ChangelogSnippet.module.css
@@ -37,3 +37,10 @@
     grid-template-columns: 1fr;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .sectionHeader {
+    justify-content: space-between;
+    width: 100%;
+  }
+}
