--- a/src/components/ChangelogSnippet/ChangelogSnippet.astro
+++ b/src/components/ChangelogSnippet/ChangelogSnippet.astro
@@ -5,6 +5,12 @@ import ChangelogCard from "./ChangelogCard.astro"
 import { ALGOLIA_INDEX, type ChangelogItem } from "./types"
 import styles from "./ChangelogSnippet.module.css"
 
+interface Props {
+  query: string
+}
+
+const { query } = Astro.props
+
 const appId = import.meta.env.PUBLIC_ALGOLIA_SEARCH_APP_ID
 const apiKey = import.meta.env.PUBLIC_ALGOLIA_SEARCH_PUBLIC_API_KEY
 
@@ -14,7 +20,7 @@ const req = await client.search({
   requests: [
     {
       indexName: ALGOLIA_INDEX.CHANGELOG,
-      query: "ccip",
+      query,
     },
   ],
 })
