--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,9 @@ import BaseLayout from "~/layouts/BaseLayout.astro"
 
 import * as CONFIG from "../config"
 import { Typography } from "@chainlink/blocks"
+import CardsWrapper from "~/components/Cards/CardsWrapper.astro"
+import type { ICard } from "~/components/Cards/types"
+import Demos from "~/components/Demos.astro"
 
 const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.title}`
 ---
@@ -39,6 +42,19 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
           <a href="/data-streams/getting-started-hardhat">Getting Started with Data Streams</a>
           <a href="/data-streams/crypto-streams">Data Streams Addresses</a>
         </div>
+    <section class="demos"><Demos /></section>
+    <div class="recommended">
+      <h4>Recommended reading</h4>
+      <h2>We think you'd love to explore</h2>
+      <div>
+        <a href="/getting-started/conceptual-overview">General</a>
+        <a href="/resources/link-token-contracts">Link Token Contracts</a>
+        <a href="/ccip/getting-started">Getting Started with CCIP</a>
+        <a href="/ccip/directory">CCIP Directory</a>
+        <a href="/data-feeds/price-feeds/addresses">Data Feed Addresses</a>
+        <a href="/data-feeds/smartdata/addresses">SmartData Feed Addresses</a>
+        <a href="/data-streams/getting-started-hardhat">Getting Started with Data Streams</a>
+        <a href="/data-streams/crypto-streams">Data Streams Addresses</a>
       </div>
     </div>
   </main>
@@ -206,6 +222,16 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
   @media (min-width: 72em) {
     .hero,
     .wrapper {
+    .demos {
+      max-width: min(1200px, calc(100% - 2 * var(--space-16x)));
+      padding: 0;
+    }
+
+    .demos {
+      margin: 0 auto;
+    }
+
+    .recommended {
       max-width: min(1200px, calc(100% - 2 * var(--space-16x)));
       padding: 0;
     }
