--- a/src/components/ChangelogSnippet/ChangelogSnippet.astro
+++ b/src/components/ChangelogSnippet/ChangelogSnippet.astro
@@ -4,6 +4,7 @@ import { searchClient } from "@algolia/client-search"
 import ChangelogCard from "./ChangelogCard.astro"
 import { ALGOLIA_INDEX, type ChangelogItem } from "./types"
 import styles from "./ChangelogSnippet.module.css"
+import { getSecret } from "astro:env/server"
 
 interface Props {
   query: string
@@ -11,8 +12,12 @@ interface Props {
 
 const { query } = Astro.props
 
-const appId = import.meta.env.PUBLIC_ALGOLIA_SEARCH_APP_ID
-const apiKey = import.meta.env.PUBLIC_ALGOLIA_SEARCH_PUBLIC_API_KEY
+const appId = getSecret("ALGOLIA_APP_ID")
+const apiKey = getSecret("PUBLIC_ALGOLIA_SEARCH_PUBLIC_API_KEY")
+
+if (!appId || !apiKey) {
+  throw new Error("Missing Algolia credentials")
+}
 
 const client = searchClient(appId, apiKey)
 
