--- a/src/components/LandingHero/landingHero.module.css
+++ b/src/components/LandingHero/landingHero.module.css
@@ -28,9 +28,11 @@
 .heroImage {
   width: 100%;
   height: 100%;
-  object-fit: cover;
 }
 
+.heroDotted {
+  width: 100%;
+}
 .heroLeft {
   display: flex;
   align-items: end;
