fixes merge conflicts

--- a/src/components/JourneyCards/JourneyCards.astro
+++ b/src/components/JourneyCards/JourneyCards.astro
@@ -92,36 +92,39 @@ const columns = [
 ]
 ---
 
-<div class="journey-cards">
-  {
-    columns.map((column) => (
-      <div class="journey-column">
-        <header class="column-header">
-          <Typography variant="h5" className="column-title">
-            {column.title}
-          </Typography>
-        </header>
-        {column.items.map((item) => (
-          <a href={item.href} class="journey-card">
-            <div class="card-content">
-              <Typography variant="body-semi">{item.title}</Typography>
-              <Typography variant="body-s" color="muted">
-                {item.description}
-              </Typography>
-            </div>
+<section>
+  <Typography variant="h4" className="section-title">Start your Chainlink journey</Typography>
+  <div class="journey-cards">
+    {
+      columns.map((column) => (
+        <div class="journey-column">
+          <header class="column-header">
+            <Typography variant="h5" className="column-title">
+              {column.title}
+            </Typography>
+          </header>
+          {column.items.map((item) => (
+            <a href={item.href} class="journey-card">
+              <div class="card-content">
+                <Typography variant="body-semi">{item.title}</Typography>
+                <Typography variant="body-s" color="muted">
+                  {item.description}
+                </Typography>
+              </div>
 
-            <footer class="journey-footer">
-              <Tag size="sm" className="footer-tag">
-                <Typography variant="code-s">{item.badge}</Typography>
-              </Tag>
-              <img src="/assets/icons/upper-right-arrow.svg" class="footer-icon" />
-            </footer>
-          </a>
-        ))}
-      </div>
-    ))
-  }
-</div>
+              <footer class="journey-footer">
+                <Tag size="sm" className="footer-tag">
+                  <Typography variant="code-s">{item.badge}</Typography>
+                </Tag>
+                <img src="/assets/icons/upper-right-arrow.svg" class="footer-icon" />
+              </footer>
+            </a>
+          ))}
+        </div>
+      ))
+    }
+  </div>
+</section>
 
 <style>
   .journey-cards {
@@ -163,6 +166,11 @@ const columns = [
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+
+  .section-title {
+    font-size: 32px;
+    margin-bottom: var(--space-10x);
   }
 
   .footer {
