--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,8 @@ import JourneyCards from "~/components/JourneyCards/JourneyCards.astro"
 import BaseLayout from "~/layouts/BaseLayout.astro"
 
 import * as CONFIG from "../config"
-import { Typography } from "@chainlink/blocks"
-import CardsWrapper from "~/components/Cards/CardsWrapper.astro"
-import type { ICard } from "~/components/Cards/types"
 import Demos from "~/components/Demos.astro"
+import { Typography } from "@chainlink/blocks"
 
 const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.title}`
 ---
@@ -22,21 +20,24 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
         <ProductTabs />
       </div>
     </div>
+    <div class="wrapper">
+      <JourneyCards />
 
-    <Demos />
+      <Demos />
 
-    <div class="recommended">
-      <h4>Recommended reading</h4>
-      <h2>We think you'd love to explore</h2>
-      <div>
-        <a href="/getting-started/conceptual-overview">General</a>
-        <a href="/resources/link-token-contracts">Link Token Contracts</a>
-        <a href="/ccip/getting-started">Getting Started with CCIP</a>
-        <a href="/ccip/directory">CCIP Directory</a>
-        <a href="/data-feeds/price-feeds/addresses">Data Feed Addresses</a>
-        <a href="/data-feeds/smartdata/addresses">SmartData Feed Addresses</a>
-        <a href="/data-streams/getting-started-hardhat">Getting Started with Data Streams</a>
-        <a href="/data-streams/crypto-streams">Data Streams Addresses</a>
+      <div class="recommended">
+        <h4>Recommended reading</h4>
+        <h2>We think you'd love to explore</h2>
+        <div>
+          <a href="/getting-started/conceptual-overview">General</a>
+          <a href="/resources/link-token-contracts">Link Token Contracts</a>
+          <a href="/ccip/getting-started">Getting Started with CCIP</a>
+          <a href="/ccip/directory">CCIP Directory</a>
+          <a href="/data-feeds/price-feeds/addresses">Data Feed Addresses</a>
+          <a href="/data-feeds/smartdata/addresses">SmartData Feed Addresses</a>
+          <a href="/data-streams/getting-started-hardhat">Getting Started with Data Streams</a>
+          <a href="/data-streams/crypto-streams">Data Streams Addresses</a>
+        </div>
       </div>
     </div>
   </main>
@@ -139,15 +140,6 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
 
   .recommended a:hover {
     background-color: var(--blue-100);
-  }
-
-  .section-title {
-    font-size: 32px;
-    margin-bottom: var(--space-10x);
-  }
-
-  .section {
-    margin: 0 var(--space-6x);
   }
 
   .wrapper {
