--- a/src/components/ChangelogSnippet/ChangelogSnippet.astro
+++ b/src/components/ChangelogSnippet/ChangelogSnippet.astro
@@ -1,6 +1,6 @@
 ---
 import { SvgArrowRight2, Typography } from "@chainlink/blocks"
-import { searchClient } from "@algolia/client-search"
+import { SearchClient, searchClient } from "@algolia/client-search"
 import ChangelogCard from "./ChangelogCard.astro"
 import { AlgoliaQuery, type ChangelogItem } from "./types"
 import styles from "./ChangelogSnippet.module.css"
@@ -15,32 +15,35 @@ const { query } = Astro.props
 const appId = getSecret("ALGOLIA_APP_ID")
 const apiKey = getSecret("PUBLIC_ALGOLIA_SEARCH_PUBLIC_API_KEY")
 
-if (!appId || !apiKey) {
-  throw new Error("Missing Algolia credentials")
+let client: SearchClient
+let latestLog: ChangelogItem | undefined = undefined
+
+// Initialize client if appId and apiKey are available to avoid needing to update
+// the github actions with the new keys
+if (appId && apiKey) {
+  client = searchClient(appId, apiKey)
+
+  const req = await client.search({
+    requests: [
+      {
+        indexName: "Changelog",
+        restrictSearchableAttributes: ["topic"],
+        query,
+        hitsPerPage: 1,
+      },
+    ],
+  })
+
+  const firstResult = req.results[0]
+  const results = "hits" in firstResult ? (firstResult.hits as ChangelogItem[]) : []
+
+  // logs are returned sorted by created_at DESC
+  latestLog = results[0]
 }
-
-const client = searchClient(appId, apiKey)
-
-const req = await client.search({
-  requests: [
-    {
-      indexName: "Changelog",
-      restrictSearchableAttributes: ["topic"],
-      query,
-      hitsPerPage: 1,
-    },
-  ],
-})
-
-const firstResult = req.results[0]
-const results = "hits" in firstResult ? (firstResult.hits as ChangelogItem[]) : []
-
-// logs are returned sorted by created_at DESC
-const latestLog = results[0]
 ---
 
 {
-  results.length > 0 && (
+  latestLog && (
     <section class={styles.container}>
       <header class={styles.sectionHeader}>
         <Typography
