cleaned up old components and fixed some mobile styling

--- a/src/components/JourneyCards/JourneyCards.astro
+++ b/src/components/JourneyCards/JourneyCards.astro
@@ -169,7 +169,7 @@ const columns = [
   }
 
   .section-title {
-    font-size: 32px;
+    font-size: 28px;
     margin-bottom: var(--space-10x);
   }
 
@@ -214,6 +214,12 @@ const columns = [
     .journey-card h4 {
       font-size: 16px;
       line-height: 22px;
+    }
+  }
+
+  @media screen and (min-width: 62em) {
+    .section-title {
+      font-size: 32px;
     }
   }
 </style>
