--- a/src/components/LandingHero/LandingHero.astro
+++ b/src/components/LandingHero/LandingHero.astro
@@ -7,7 +7,9 @@ import styles from "./landingHero.module.css"
 <section class={styles.wrapper}>
   <div class={styles.content}>
     <Typography variant="h1" className={styles.title}>Explore docs & resources</Typography>
-    <MegaMenu client:only="react" />
+    <section class={styles.menu}>
+      <MegaMenu client:only="react" />
+    </section>
   </div>
 
   <div class={styles.backgrounds}>
