--- a/src/components/LandingHero/landingHero.module.css
+++ b/src/components/LandingHero/landingHero.module.css
@@ -28,11 +28,12 @@
 .heroImage {
   width: 100%;
   height: 100%;
-  object-fit: "cover";
+  object-fit: cover;
 }
 
 .heroDotted {
   width: 100%;
+  object-fit: cover;
 }
 .heroLeft {
   display: flex;
@@ -43,4 +44,26 @@
 .heroLeft {
   width: 50%;
   height: 100%;
+}
+
+@media screen and (max-width: 991px) {
+  .wrapper {
+    background-color: transparent;
+    height: auto;
+    padding: 36px var(--space-10x);
+  }
+  .backgrounds,
+  .content .menu {
+    display: none;
+  }
+
+  .content {
+    position: unset;
+    padding: 0;
+  }
+
+  .title {
+    font-size: 40px;
+    margin-bottom: 0;
+  }
 }
