--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,4 @@
 ---
-import ProductTabs from "../features/landing/sections/ProductTabs.astro"
 import JourneyCards from "~/components/JourneyCards/JourneyCards.astro"
 import TechnicalStandards from "~/components/TechnicalStandards/TechnicalStandards.astro"
 import BaseLayout from "~/layouts/BaseLayout.astro"
@@ -15,24 +14,13 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
 <BaseLayout title={formattedContentTitle}>
   <main>
     <LandingHero />
-    <!-- TODO: remove -->
-    <div class="heroContainer">
-      <div class="hero">
-        <h1>Chainlink Developer Docs</h1>
-        <h2>What are you building?</h2>
 
-        <ProductTabs />
-      </div>
-    </div>
     <div class="wrapper">
       <JourneyCards />
 
       <Demos />
 
-      <div class="section">
-        <Typography variant="h4" className="section-title">Technical Standards</Typography>
-        <TechnicalStandards />
-      </div>
+      <TechnicalStandards />
 
       <div class="recommended">
         <h4>Recommended reading</h4>
@@ -157,6 +145,7 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
     gap: 82px;
     max-width: var(--fullwidth-max-width);
     margin: 0 auto;
+    padding: 0 var(--space-10x);
   }
 
   @media (min-width: 50em) {
@@ -198,11 +187,8 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
       line-height: var(--space-6x);
       margin-bottom: var(--space-2x);
     }
-    .wrapper {
-      margin-top: 60px;
-    }
   }
-  @media (min-width: 72em) {
+  @media (min-width: 62em) {
     .hero {
       max-width: min(1200px, calc(100% - 2 * var(--space-16x)));
       padding: 0;
@@ -211,6 +197,10 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
     .recommended {
       max-width: min(1200px, calc(100% - 2 * var(--space-16x)));
       padding: 0;
+    }
+
+    .wrapper {
+      margin-top: 60px;
     }
   }
 </style>
