format megamenu and remove dead code

--- a/src/components/Header/Nav/ProductNavigation/Desktop/megaMenu.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Desktop/megaMenu.module.css
@@ -107,6 +107,41 @@
   font-weight: 500;
 }
 
+.wrapper.mobile {
+  border: none;
+  overflow: unset;
+
+  & .row {
+    grid-template-columns: 1fr;
+    border-bottom: none;
+  }
+
+  & .section header {
+    border-bottom: 1px solid var(--border);
+    border-top: 1px solid var(--border);
+  }
+
+  & .section {
+    border-right: none;
+  }
+
+  & .groupItemTitle {
+    display: block;
+    -webkit-line-clamp: unset;
+    line-clamp: unset;
+    -webkit-box-orient: unset;
+    overflow: visible;
+  }
+
+  & .groupItemDescription {
+    display: block;
+    -webkit-line-clamp: unset;
+    line-clamp: unset;
+    -webkit-box-orient: unset;
+    overflow: visible;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .megaMenuContainer {
     display: flex;
