--- a/src/components/Header/Nav/ProductNavigation/Mobile/productNavigation.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Mobile/productNavigation.module.css
@@ -34,6 +34,7 @@
   width: 200vw;
   display: flex;
   transition: transform 0.3s;
+  height: 100%;
 }
 
 .main {
@@ -76,6 +77,7 @@
 .subProductContent {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .subProductContentTitle {
