--- a/src/components/TryItOut/styles.module.css
+++ b/src/components/TryItOut/styles.module.css
@@ -72,7 +72,14 @@
 }
 
 .body {
-  max-width: 1440px;
+  max-width: var(--fullwidth-max-width);
   width: 100%;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 768px) {
+  .content {
+    grid-template-columns: 1fr;
+    padding: 0 var(--space-8x);
+  }
 }
